--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <p>This is the section in which I'll post occasional updates (by adding them to the bullet list). Hopefully through this you'll be able to find out where to look for a specific commit.</p>
                 <ul>
                     <li>March 15th 2020 - forked microsoft/winfile and added a missing library</li>
+                    <li>March 16th 2020 - created a new repository, with material clarification for HTML/CSS/(partially) JS and C#/C++</li>
                 </ul>
             </div>
             <div class = "footer">
