--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <ul>
                     <li>March 15th 2020 - forked microsoft/winfile and added a missing library</li>
                     <li>March 16th 2020 - created a new repository, with material clarification for HTML/CSS/(partially) JS and C#/C++</li>
+                    <li>March 26th 2020 - officially declaring a hiatus.</li>
                 </ul>
             </div>
             <div class = "footer">
