--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <li>March 15th 2020 - forked microsoft/winfile and added a missing library</li>
                     <li>March 16th 2020 - created a new repository, with material clarification for HTML/CSS/(partially) JS and C#/C++</li>
                     <li>March 26th 2020 - officially declaring a hiatus.</li>
+                    <li>August 26th 2020 - 5 months forward from my hiatus, on a brand new Linux install, I've decided to focus on UNIX-like based software/kernel development.
                 </ul>
             </div>
             <div class = "footer">
