added a new link

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel = "stylesheet" href = "style.css">
         <link rel = "shortcut icon" type = "image/x-icon" href = "favicon.png">
         <meta name = "author" content = "github/wiktornowicki">
-        <meta name = "description" content = "If you're reading this, then you've got COVID-19.">
+        <meta name = "description" content = "hi, i built a GNU+LLVM/Linux-based system!">
     </head>
     <body>
         <div class = "box">
@@ -18,6 +18,7 @@
                 <div class = "link"><a href = "crystal/index.html">Crystal</a></div>
                 <div class = "link"><a href = "contact.html">Contact</a></div>
                 <div class = "link"><a href = "https://github.com/wiktornowicki">GitHub</a></div>
+                <div class = "link"><a href = "prismlinux.html">Prism</a></div>
             </div>
             <div class = "section1">
                 <div class = "sectionHeader1">
@@ -29,6 +30,7 @@
                 <p>Hey, I'm Wiktor! I'm an n/b programming student from Poland, mainly focusing on web designing and GUI app designing. I am pretty much an amateur at this point, however I don't think I'll ever be more than that. I'm doing everything purely for fun, and of course, to help other people out. I'm trying to create my own programming language, and I suppose it'll take a while, but hey! It'll happen some day. My hobbies are pretty much nothing but playing RPGs/rhythm-based games, playing guitar and programming. Oh, yeah, and I make VMs.</p>
                 <p>I'm doing my best to improve at these things, and I guess I'm getting somewhere. I mean, I made this page without using any external templates.</p>
                 <p>If you find me on some crappy forum making fun of people or see me begging for VESA drivers for ancient Windows versions on BetaArchive, don't be surprised. It's a lifestyle. Well, that's about it for talking about me.</p>
+                <p>I also am working on my own Linux distribution, which I codenamed "Prism Linux".</p>
             </div>
             <div class = "section2">
                 <div class = "sectionHeader2">
@@ -39,7 +41,8 @@
                     <li>March 15th 2020 - forked microsoft/winfile and added a missing library</li>
                     <li>March 16th 2020 - created a new repository, with material clarification for HTML/CSS/(partially) JS and C#/C++</li>
                     <li>March 26th 2020 - officially declaring a hiatus.</li>
-                    <li>August 26th 2020 - 5 months forward from my hiatus, on a brand new Linux install, I've decided to focus on UNIX-like based software/kernel development.
+                    <li>August 26th 2020 - 5 months forward from my hiatus, on a brand new Linux install, I've decided to focus on UNIX-like based software/kernel development.</li>
+                    <li>December 29th 2020 - first (somewhat) stable build of Prism Linux, to be published.</li>
                 </ul>
             </div>
             <div class = "footer">
