--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class = "link"><a href = "crystal/index.html">Crystal</a></div>
                 <div class = "link"><a href = "contact.html">Contact</a></div>
                 <div class = "link"><a href = "https://github.com/wiktornowicki">GitHub</a></div>
-                <div class = "link"><a href = "prismlinux.html">Prism</a></div>
+                <div class = "link"><a href = "./prismlinux.html">Prism</a></div>
             </div>
             <div class = "section1">
                 <div class = "sectionHeader1">
