--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     <li>March 26th 2020 - officially declaring a hiatus.</li>
                     <li>August 26th 2020 - 5 months forward from my hiatus, on a brand new Linux install, I've decided to focus on UNIX-like based software/kernel development.</li>
                     <li>December 29th 2020 - first (somewhat) stable build of Prism Linux, to be published.</li>
+                    <li>January 27th 2020 - a (almost) month overdue Prism Linux release tarball - now just to make a live image.</li>
                 </ul>
             </div>
             <div class = "footer">
